--- a/epley_web/package.json
+++ b/epley_web/package.json
@@ -15,11 +15,13 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/three": "^0.161.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
+    "three": "^0.161.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
